tests/ui/traits/const-traits/partial/no-const-callers.stderr
error[E0015]: cannot call non-const function `std::io::_print` in constant functions
  --> $DIR/no-const-callers.rs:15:14
   |
LL |     fn b() { println!("hello"); }
   |              ^^^^^^^^^^^^^^^^^
   |
note: function `_print` is not const
  --> $SRC_DIR/std/src/io/stdio.rs:LL:COL
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants
   = note: this error originates in the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0015]: cannot call non-const associated function `<T as A>::b` in constant functions
  --> $DIR/no-const-callers.rs:21:5
   |
LL |     T::b();
   |     ^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const associated function `<() as A>::b` in constant functions
  --> $DIR/no-const-callers.rs:24:5
   |
LL |     <()>::b();
   |     ^^^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error[E0015]: cannot call non-const associated function `<u8 as A>::b` in constant functions
  --> $DIR/no-const-callers.rs:27:5
   |
LL |     u8::b();
   |     ^^^^^^^
   |
   = note: calls in constant functions are limited to constant functions, tuple structs and tuple variants

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0015`.
